[workspace]
members = [
    "blobby",
    "block-buffer",
    "block-padding",
    "collectable",
    "cmov",
    "cpubits",
    "cpufeatures",
    "dbl",
    "fiat-constify",
    "hex-literal",
    "hybrid-array",
    "inout",
    "opaque-debug",
    "wycheproof2blb",
    "zeroize",
    "zeroize/derive"
]

[profile.dev]
opt-level = 2
